# axl-agent-exchange-language

./: .gitignore  AgenteXchangeLanguage.md  MANIFEST.in  README.md  pyproject.toml
docs/: axl-directive.md  sam-axl-evolution.md
scripts/: generate_axl_shared_types.py
src/agent_exchange_language/: __init__.py
src/axl/: __init__.py  axl_protocol.json  models.py  protocol.py
tests/: test_protocol.py
tests/fixtures/: axl_invalid_messages.json
typescript/: axl.ts
